# predict_volley

./: .gitignore  README.md  pyproject.toml
Paris2024/: Paris2024.py
predict_volley/: teams.py  tournament.py  utils.py
